2008-04-16  Piotr Fusik  <fox@scene.pl>
* antic.c, atari.c, memory.c: in C code local variable definitions should
  precede statements


2008-04-16  Achim Haertel  <achim.haertel@e-technik.tu-chemnitz.de>
* cassette.[ch], pia.c, pokey.c, screen.c, sio.[ch]:
  implemented writing to raw cassette files


2008-04-08  Perry McFarlane  <perry_m@fastmail.fm>
* javanvm/atari_javanvm.c, javanvm/atari800.java, configure.ac: sound support
for the Java NestedVM port


2007-11-28  Marcin Zukowski  <marcin.zukowski@gmail.com>
* cartridge.c: fixed Atrax cartridge bank switching


2007-10-19  Perry McFarlane  <perry_m@fastmail.fm>
* javanvm/atari_javanvm.c: keypad fix 


2007-10-18  Perry McFarlane  <perry_m@fastmail.fm>
* javanvm/atari_javanvm.[ch] javanvm/atari800.java added for Java NestedVM port
  configure.ac, Makefile.in, platform.h, INSTALL, USAGE: modified for
  NestedVM port
* screen.c, USAGE: -showspeed command line option
* win32/*: suppress gcc warnings
* win32/screen_win32.c, configure.ac: support Atari_PaletteUpdate


2007-10-11  Perry McFarlane  <perry_m@fastmail.fm>
* devices.h: make h_current_dir extern
* monitor.c: COLOUR -> COLOR


2007-10-04  Perry McFarlane  <perry_m@fastmail.fm>
* colours.[ch], atari.[ch], platform.h, USAGE, atari_sdl.c, atari_ntsc.c,
  configure.ac, TODO: added support for switching between NTSC and PAL palettes.
  The platform-specific function Atari_PaletteUpdate is now required in those
  ports which calculate their own palette from colortable.  The SDL version
  is working but other ports will need to be updated.


2007-10-02  Perry McFarlane  <perry_m@fastmail.fm>
* antic.c: cleaner macros
* cycle_map.c: minor cleanup
* ui.c, README, amiga/Atari800.guide: GPL version 2 now, not 1
* most files: FSF address change in GPL notices.


2007-09-30  Perry McFarlane  <perry_m@fastmail.fm>
* antic.c: Added better support for GTIA bug mode.


2007-09-12  Perry McFarlane  <perry_m@fastmail.fm>